fix: main content is visible directly on header element

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,9 @@
 @import "../../../theme";
 
+:host {
+  z-index: 999;
+}
+
 .header {
   height: 5rem;
   width: 100%;
